<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:id="@+id/select_app_container"
        android:layout_width="match_parent"
        android:background="@drawable/bg_btn"
        android:layout_marginTop="10dp"
        android:layout_height="60dp">

        <TextView
            android:id="@+id/capture_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="30dp"
            android:text="@string/select_app"
            android:textColor="@color/black_FF333333" />



        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/div_common_edge" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/setting_enter"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/select_ip_container"
        android:layout_width="match_parent"
        android:background="@drawable/bg_btn"
        android:layout_height="60dp">

        <TextView
            android:id="@+id/capture_ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="30dp"
            android:text="@string/select_ip"
            android:textColor="@color/black_FF333333" />



        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/div_common_edge" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/setting_enter"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/select_host_container"
        android:layout_width="match_parent"
        android:background="@drawable/bg_btn"
        android:layout_height="60dp">

        <TextView
            android:id="@+id/capture_host"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/select_host"
            android:singleLine="true"

            android:textColor="@color/black_FF333333" />



        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/div_common_edge" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/setting_enter"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@drawable/bg_btn"
        android:visibility="gone"
        android:layout_height="60dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/select_core_data"
            android:singleLine="true"

            android:textColor="@color/black_FF333333" />



        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/div_common_edge" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/setting_enter"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            />
    </RelativeLayout>
</LinearLayout>